# bmlibrarian

./: .coverage  .coverage.URDhhMBP128.local.92354.XsdmffXx  .env  .gitignore  =3.2.6  AUDIT_SYSTEM_DESIGN.md  BROWSER_DOWNLOADER.md  CHUNKER_PERFORMANCE_COMPARISON.md  CITATION_EXTRACTION_DEBUG.md  CITATION_PROGRESS_ENHANCEMENTS.md  CITATION_REVIEW.md  CITATION_VALIDATION_FIX.md  CLAUDE.md  DOCUMENT_CONTEXT_MENU_FEATURE.md  FACT_CHECKER_DISTRIBUTION_PLAN.md  FACT_CHECKER_DISTRIBUTION_QUICKSTART.md  GUI_PERFORMANCE_TRACKING.md  HANDOVER.md  HUMAN_EDIT_LOGGING.md  PERFORMANCE_TRACKING_COMPLETE.md  PHASE1_COMPLETE.md  PLUGIN_DEVELOPER_MANUAL.md  PR_DESCRIPTION.md  PR_PICO_LAB_QT.md  PUBMEDQA_IMPORT_GUIDE.md  PUBMED_BULK_INTEGRATION_PLAN.md  PYSIDE6_MIGRATION_PLAN.md  PYSIDE6_MIGRATION_README.md  PYSIDE6_QUICKSTART.md  PYSIDE6_SETUP_WIZARD_QUICK_REFERENCE.md  QT_RESEARCH_TAB_DESIGN.md  README.md  REAL_SOLUTION.md  REFACTORING_SUMMARY.md  RELEASE_0.9.1.md  RELEASE_MESSAGE_V0.8.md  RELEASE_NOTES.md  ROADMAP.md  SCORING_TAB_DEBUG_GUIDE.md  SCORING_TAB_FIX.md  (+111 more)
.claude/: settings.local.json
.implementation_plan/: 00_OVERVIEW.md  01_PHASE1_CONFIG.md  02_PHASE2_CORE.md  03_PHASE3_DATABASE.md  04_PHASE4_CLI.md  05_PHASE5_TESTS.md  06_PHASE6_DOCS.md  07_PHASE7_ROLLOUT.md  README.md
bmlibrarian_lite_standalone/: .gitignore  README.md  bmlibrarian_lite.py  pyproject.toml
config_examples/: bmlibrarian_config.json  paper_weight_assessment_example.json
doc/: DEBUG_ORPHAN_MATCHING.md  OPENATHENS_MIGRATION.md  PHASE4_PROGRESS.md  PHASE6_PROGRESS.md  QUERY_PERFORMANCE_TRACKING.md  QUICK_START_PERFORMANCE_TRACKING.md  README.md  TODO_code_review_2026-07.md  TO_DO.md  development_journey.md
examples/: FLET_VS_PYSIDE6_COMPARISON.md  PYSIDE6_MIGRATION_SUMMARY.md  PYSIDE6_POC_README.md  PYSIDE6_QUICKSTART.md  agent_demo.py  agent_queue.db  agents_demo.py  audit_tracking_demo.py  audit_with_evaluators_demo.py  citation_demo.py  counterfactual_demo.py  counterfactual_literature_search.py  counterfactual_research_protocol.md  document_card_factory_demo.py  enhanced_agent_demo.py  fact_checker_demo.py  fact_checker_input_example.json  multi_model_config_example.json  openathens_demo.py  pico_demo.py  pyside6_poc_research_gui.py  pyside6_requirements.txt  pyside6_stepcard_demo.py  query_performance_demo.py  queue_demo.py  queue_recovery_demo.py  reporting_demo.py  search_abstracts.py  simple_counterfactual_workflow.py  unified_card_demo.py
migrations/: 003_create_audit_schema.sql  004_update_audit_for_evaluators.sql  005_create_fulltext_search_function.sql  006_create_search_functions.sql  007_create_semantic_docsearch.sql  008_MIGRATION_README.md  008_create_factcheck_schema.sql  009_add_context_long_answer_to_statements.sql  010_create_papercheck_schema.sql  011_add_paper_weight_schema.sql  011_rollback_paper_weight_schema.sql  012_create_bmlsettings_schema.sql  013_create_debug_schema.sql  014_add_pgcrypto_extension.sql  015_create_semantic_chunking_schema.sql  016_add_source_metadata_to_abstracts_checked.sql  017_add_generation_metadata_columns.sql  018_create_document_specific_search_functions.sql  019_create_pdf_download_history.sql  021_create_thesaurus_schema.sql  (+12 more)
(+1049 files in other folders)
