[project]
name = "bmlibrarian"
version = "0.1.0"
description = "Biomedical Literature Librarian - A Python library for accessing biomedical literature databases"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "psycopg-pool>=3.1.0",
    "psycopg[binary]>=3.2.9",
    "python-dotenv>=1.1.1",
    "ollama>=0.2.1",
    "requests>=2.31.0",
    "psycopg-binary>=3.2.9",
    "flet[all]>=0.24.1",
    "playwright>=1.55.0",
    "numpy>=1.26.0",
    "pandas>=2.1.0",
    "scipy>=1.11.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    # PDF support
    "PyMuPDF>=1.23.0",
    # PySide6 dependencies for Qt GUI
    "pyside6>=6.6.0",
    "PySide6-Addons>=6.6.0",
    "Markdown>=3.5.0",
    "Pygments>=2.17.0",
    "qtawesome>=1.3.0",
    "psutil>=7.1.3",
    "backoff>=2.2.1",
    "pymupdf4llm>=0.2.2",
    "pymupdf-layout>=0.1.0",
    "tqdm>=4.66.0",
    "pymupdf-layout>=1.26.6",
    "opencv-python>=4.11.0.86",
    "marker-pdf>=1.10.1",
    "llama-cpp-python>=0.3.16",
    "sentence-transformers>=5.1.2",
]

[project.optional-dependencies]
browser = [
    "playwright>=1.48.0",
]

[project.scripts]
bmlibrarian = "bmlibrarian.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0",
    "pytest-mock>=3.10",
    "pytest-cov>=4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
    "--cov=src/bmlibrarian",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=80"
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "requires_database: marks tests that require a live database connection",
    "requires_ollama: marks tests that require a running Ollama instance"
]
